# MemoTag1

./: .gitignore  .replit  README-REPLIT.md  README.md  REPORT.md  create_test_audio.py  deploy.py  pyproject.toml  replit.nix  requirements.txt  run_api.py  start.py  test_api_client.py
app/: main.py
app/utils/: audio_utils.py
notebooks/: cognitive_decline_analysis.ipynb
src/: audio_processing.py  data_downloader.py  model.py  scipy_compat.py  text_processing.py  visualization.py
tests/: test_api.py
