[tool.poetry]
name = "memotag-cognitive-api"
version = "1.0.0"
description = "API for cognitive decline detection from voice data"
authors = ["MemoTag Team"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
librosa = "^0.10.1"
pydub = "^0.25.1"
soundfile = "^0.12.1"
SpeechRecognition = "^3.10.0"
whisper = "^1.1.10"
openai-whisper = "20230918"
nltk = "^3.8.1"
spacy = "^3.6.1"
transformers = "^4.30.2"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
tqdm = "^4.65.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
